Implemented inOrder method to return sorted postcodes